--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -5,10 +5,6 @@ body {
     font-family: Noto Sans;
     box-sizing: border-box;
 }
-
-.hero-wrapper {
-    max-width: 520px;
-}
 .hero:where(.astro-7XAARZHW) {
     position: relative;
     overflow: hidden;
@@ -28,49 +24,13 @@ body {
     flex-flow: row wrap-reverse;
     justify-content: center;
     border-radius: 10px;
+    background: linear-gradient(135deg, rgba(251, 158, 112, 0.15) 0%, rgba(251, 158, 112, 0.00) 100%);
     padding-right: 40px;
 }
 
 @media screen and (max-width: 660px) {
     .hero-logo:where(.astro-7XAARZHW) {
         padding: 30px 40px 0px 40px;
-    }
-}
-
-#main_navbar ul{
-    padding-bottom: 0;
-}
-
-.td-navbar {
-    justify-content: center;
-
-    .nav-bar-wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-flow: row wrap;
-        flex-grow: 1;
-        max-width: 1200px;
-
-        ul {
-            flex-flow: row wrap;
-            justify-content: center;
-        }
-    }
-}
-
-@media (max-width: 768px) {
-    #main_navbar{
-        margin: 0 !important;
-    }
-}
-
-@media (max-width: 992px) {
-    .td-navbar .td-navbar-nav-scroll{
-        height: 100%;
-    }
-    .nav-bar-wrapper  ul{
-        align-items: flex-end;
     }
 }
 
@@ -133,32 +93,16 @@ body {
     flex-direction: row;
     align-items: flex-end;
     justify-content: center;
-    padding: 148px 36px 84px 36px;
+    padding: 148px 24px 84px 24px;
     background-color: #03153a;
 }
-@media screen and (max-width: 767px) {
-    .overlay:where(.astro-7XAARZHW){
-        padding: 24px 36px 84px 36px;
-    }
-}
-
-main > div {
-    padding-right: 36px;
-    padding-left: 36px;
-}
-
-
-.contraint {
+.constraint:where(.astro-7XAARZHW) {
     width: 100%;
     max-width: 1200px;
-}
-
-.constraint:where(.astro-7XAARZHW) {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 100%;
 }
 .constraint:where(.astro-7XAARZHW).vertical {
     flex-direction: column;
@@ -169,8 +113,9 @@ main > div {
     align-items: center;
     flex-flow: row wrap;
     justify-content: center;
-    gap: 46px;
     width: 100%;
+    max-width: 1200px;
+    gap: 46px;
 }
 
 
@@ -178,7 +123,7 @@ main > div {
     font-size: 62px;
     font-style: normal;
     font-weight: 800;
-    line-height: 130%;
+    line-height: 100%;
     letter-spacing: 0.62px;
     color: #fff;
     margin-top: 0;
@@ -300,6 +245,13 @@ main > div {
     border-radius: 4px;
 }
 
+@media screen and (max-width: 565px) {
+    #quickstart:where(.astro-7XAARZHW) {
+        width: 264px;
+    }
+}
+
+
 #download:where(.astro-7XAARZHW) {
     width: 264px;
     overflow: hidden;
@@ -325,18 +277,14 @@ main > div {
     width: 20px;
 }
 
-.github-text {
-    flex-grow: 1;
-    text-align: center;
-}
-
 footer {
     background: #03153A;
-    padding: 50px 36px;
+    padding: 50px 0px;
 }
 #footer-content {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 20px;
     display: flex;
 }
 
@@ -371,12 +319,12 @@ footer {
     gap: 16px;
     margin-top: 15px;
 }
-.footer-follow-us i {
+.footer-follow-us i{
     font-size: 37px;
     color: #FF7442;
 }
 
-.footer-logo > img{
+#footer-content  > div > div > img{
     max-width: 167px;
     padding-right: 32px;
 }
@@ -400,43 +348,6 @@ footer {
 
 .footer-text > span {
     font-weight: 700;
-}
-
-@media screen and (max-width: 650px) {
-    footer {
-        padding: 66px 36px 86px 36px;
-    }
-    #footer-content > div {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .footer-logo {
-        flex-direction: column;
-    }
-
-    .footer-logo > img {
-        padding-right: 0;
-        padding-bottom: 23px;
-    }
-
-    .footer-text {
-        margin-top: 0;
-        padding-left: 0;
-        padding: 23px 0px
-    }
-
-    .footer-text::before {
-        transform: rotate(90deg);
-        left: 50%;
-        top: -15px;
-    }
-
-    .footer-follow-us {
-        text-align: center;
-        font-size: 16px;
-    }
-
 }
 
 .sections-title:where(.astro-7XAARZHW) {
@@ -616,7 +527,7 @@ footer {
     margin-left: auto;
     display: flex;
     justify-content: space-between;
-    max-width: 250px;
+    width: 250px;
     color: #03153A;
     font-size: 14px;
     font-style: normal;
@@ -629,12 +540,12 @@ footer {
     color: #EE5007;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1040px) {
     .download-cards{
         flex-direction: column;
         gap: 43px;
     }
-    .download-others-link {
+    .download-other-link {
         margin: 46px auto 0 auto;
     }
 }
@@ -687,66 +598,6 @@ footer {
     justify-content: center;
     gap: 16px;
 }
-
-.download-cards > div > div:nth-child(2) > dialog {
-    position: relative;
-    background-color: #fff;
-    border: 1px solid rgba(0,0,0,.2);
-    border-radius: 6px;
-    box-shadow: 0 3px 9px rgba(0,0,0,.5);
-    padding: 30px 40px;
-    font-family: Noto Sans;
-}
-
-.download-cards > div > div:nth-child(2) > dialog pre {
-    padding: 20px;
-    background: #fff;
-    text-shadow: none;
-    overflow: auto;
-    border: 1px solid #ccc;
-    position: relative;
-    margin: 20px 0px;
-    max-width: 500px;
-    border-radius: 6px;
-}
-
-.download-cards > div > div:nth-child(2) > dialog::backdrop{
-    background-color: #000;
-    opacity: .5;
-}
-
-.download-cards > div > div:nth-child(2) > dialog > div:first-child {
-    position: absolute;
-    right: 0px;
-    top: 0;
-    background: #00000014;
-    padding: 5px 12px;
-    border-bottom-left-radius: 6px;
-    color: hsl(140,40%,55%);
-    display: none;
-    font-size: 13px;
-    transition: all 0.2s;
-}
-
-.modal-buttons{
-    display: flex;
-    gap: 10px;
-    justify-content: flex-end;
-}
-
-.modal-buttons > button {
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    box-shadow: 0px -1px 0px 0px rgba(0, 0, 0, 0.20) inset, 0px 1px 2px 0px rgba(0, 0, 0, 0.10), 0px 0px 2px 0px rgba(0, 0, 0, 0.20);
-}
-
-
-.modal-buttons > button:first-child {
-    background: #EE5007;
-    color: #fff;
-}
-
 .download-cards > div > div:nth-child(2) > a {
     color: #03153A;
     font-size: 12px;
@@ -770,8 +621,7 @@ footer {
 
 #welcome-blade {
     background: #EAEDF3;
-    padding-top: 64px;
-    padding-bottom: 64px;
+    padding: 64px 36px;
 }
 .welcome-wrapper {
     max-width: 1200px;
@@ -791,7 +641,6 @@ footer {
 @media screen and (max-width: 790px) {
     .welcome-wrapper {
         padding: 56px 24px 66px 24px;
-        justify-content: center;
     }
 }
 
@@ -817,6 +666,7 @@ footer {
 
 .welcome-wrapper > div > h2 > img {
     width: 187px;
+    margin-left: 32px;
 }
 
 .welcome-wrapper > div > p {
@@ -871,8 +721,7 @@ footer {
     background: #FAFCFF;
     width: 100%;
     height: 100%;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding: 100px 0;
 }
 
 .hot-off-press {
@@ -901,7 +750,7 @@ footer {
 
 .press-cards > div {
     width: 369px;
-    padding: 51px 24px;
+    padding: 51px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -914,24 +763,24 @@ footer {
 @media screen and (max-width: 400px) {
     .press-cards > div {
         width: 100%;
+        margin: 0 10px;
     }
 }
 
 .press-cards > div > p {
-    max-width: 248px;
-    height: 145px;
+    width: 248px;
+    height: 140px;
     color: #041842;
     font-family: Noto Sans;
     font-size: 21px;
     font-style: normal;
     font-weight: 600;
-    line-height: 140%;
+    line-height: 120%;
     margin-bottom: 0;
 }
 
 .press-cards > div > a {
-    max-width: 248px;
-    width: 100%;
+    width: 248px;
     color: #03153A;
     font-family: Noto Sans;
     font-size: 16px;
@@ -952,8 +801,7 @@ footer {
 .press-card-img {
     border-radius: 6px;
     background: #EE5007;
-    max-width: 248px;
-    width: 100%;
+    width: 248px;
     height: 126px;
     text-align: center;
     display: flex;
@@ -961,7 +809,7 @@ footer {
     align-items: center;
 }
 .press-card-img > img{
-    max-width: 90%;
+    width: 218px;
 }
 
 #makes-us-diff-blade{
@@ -999,6 +847,7 @@ footer {
 .makes-us-diff-cards > div {
     padding: 50px;
     max-width: 573px;
+    min-height: 578px;
     border-radius: 20px;
     background: #FFF;
     box-shadow: 0px 17px 56px -10px rgba(6, 17, 77, 0.11);
@@ -1035,6 +884,7 @@ footer {
 }
 @media screen and (max-width: 630px) {
     .makes-us-diff-cards > div {
+        margin: 0 20px;
         padding: 30px;
     }
 }
@@ -1087,7 +937,6 @@ footer {
     flex-flow: row wrap;
     justify-content: center;
     gap: 37px;
-    width: 100%;
 }
 
 .join-us-wrap-cards > a{
@@ -1099,11 +948,12 @@ footer {
 }
 
 .join-us-wrap-cards > a:hover {
-    border: 1px solid #FA7F42;
+    border: 1px solid #DA4A07;
 }
 
 .join-us-wrap-cards > a:hover > i {
-    background: #FB9E70;
+    color: #fff;
+    background: #EE5007;
 }
 
 .join-us-wrap-cards > a > i {
@@ -1200,81 +1050,4 @@ footer {
 .basics > a > div {
     max-width: 287px;
     width: 100%;
-}
-
-@media screen and (max-width: 585px) {
-    .title:where(.astro-7XAARZHW){
-        font-size: 36px;
-        text-align: center;
-    }
-    .subtitle:where(.astro-7XAARZHW){
-        font-size: 17px;
-        text-align: center;
-        display: block;
-    }
-
-    #quickstart:where(.astro-7XAARZHW), #download:where(.astro-7XAARZHW) {
-        width: 100%;
-        max-width: 304px;
-    }
-
-    .welcome-wrapper > div > h2 {
-        font-size: 36px;
-    }
-    .welcome-wrapper > div > h2 > img {
-        margin-left: 0;
-    }
-    .welcome-wrapper > div > p{
-        font-size: 20px;
-    }
-
-    .hot-off-press > h2 {
-        font-size: 36px;
-    }
-    .press-cards > div > p{
-        height: 100%;
-    }
-    .makes-us-diff > h2{
-        font-size: 36px;
-    }
-    .makes-us-diff-cards > div img{
-        margin-left: -25px;
-        margin-bottom: -30px;
-    }
-    .makes-us-diff-cards > div h3{
-        font-size: 29px;
-    }
-    .makes-us-diff-cards > div > p{
-        font-size: 17px;
-    }
-    .makes-us-diff-cards > div > div{
-        flex-direction: column;
-    }
-
-    .join-us-wrap > h2 {
-        font-size: 36px;
-    }
-    .join-us-wrap > p{
-        font-size: 20px;
-    }
-    .basics > a {
-        flex-direction: column;
-        width: 100%;
-        text-align: center;
-    }
-    .basics > a > img {
-        margin-right: 0;
-        margin-bottom: 22px;
-    }
-
-
-}
-
-@media screen and (max-width: 450px) {
-    .download-cards > div {
-        width: 100%
-    }
-    .join-us-wrap-cards > a{
-        width: 100%;
-    }
 }
