--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -598,6 +598,66 @@ footer {
     justify-content: center;
     gap: 16px;
 }
+
+.download-cards > div > div:nth-child(2) > dialog {
+    position: relative;
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 6px;
+    box-shadow: 0 3px 9px rgba(0,0,0,.5);
+    padding: 30px 40px;
+    font-family: Noto Sans;
+}
+
+.download-cards > div > div:nth-child(2) > dialog pre {
+    padding: 20px;
+    background: #fff;
+    text-shadow: none;
+    overflow: auto;
+    border: 1px solid #ccc;
+    position: relative;
+    margin: 20px 0px;
+    max-width: 500px;
+    border-radius: 6px;
+}
+
+.download-cards > div > div:nth-child(2) > dialog::backdrop{
+    background-color: #000;
+    opacity: .5;
+}
+
+.download-cards > div > div:nth-child(2) > dialog > div:first-child {
+    position: absolute;
+    right: 0px;
+    top: 0;
+    background: #00000014;
+    padding: 5px 12px;
+    border-bottom-left-radius: 6px;
+    color: hsl(140,40%,55%);
+    display: none;
+    font-size: 13px;
+    transition: all 0.2s;
+}
+
+.modal-buttons{
+    display: flex;
+    gap: 10px;
+    justify-content: flex-end;
+}
+
+.modal-buttons > button {
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    box-shadow: 0px -1px 0px 0px rgba(0, 0, 0, 0.20) inset, 0px 1px 2px 0px rgba(0, 0, 0, 0.10), 0px 0px 2px 0px rgba(0, 0, 0, 0.20);
+}
+
+
+.modal-buttons > button:first-child {
+    background: #EE5007;
+    color: #fff;
+}
+
 .download-cards > div > div:nth-child(2) > a {
     color: #03153A;
     font-size: 12px;
