Moved files to layout/partials
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -68,8 +68,8 @@
     </header>
 
 
-    {{ partialCached "content.html" . }}
-    {{ partialCached "footer.html" . }}
+    {{ partial "content.html" . }}
+    {{ partial "footer.html" . }}
     <script type="module" src="/js/index.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     {{ partialCached "scripts.html" . }}
