--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -4,7 +4,7 @@ Add styles or override variables from the theme here.
 
 */
 
-$primary: #ee5007;
+$primary: #03153A;
 $secondary: #e1e5ee;
 $enable-gradients: true;
 $enable-rounded: false;
@@ -26,4 +26,3 @@ a:hover {
 .td-navbar .navbar-brand__name {
     display: none;
 }
-  
