--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,40 +13,60 @@
   <body class="td-section astro-7XAARZHW">
     <header class="hero astro-7XAARZHW">
       <nav class="js-navbar-scroll navbar navbar-expand navbar-dark flex-column flex-md-row td-navbar">
-        <div class="td-navbar-nav-scroll ml-md-auto" id="main_navbar">
-          <ul class="navbar-nav mt-2 mt-lg-0">
-            <li class="nav-item mr-4 mb-2 mb-lg-0">
-              <a class="nav-link" href="/blog/"><span>Blog</span></a>
-            </li>
-            <li class="nav-item mr-4 mb-2 mb-lg-0">
-              <a class="nav-link" href="/community/"><span>Community</span></a>
-            </li>
-            <li class="nav-item mr-4 mb-2 mb-lg-0 mt-lg-2">
-              <a class="github-button" href="https://github.com/kairos-io/kairos" data-size="large" data-show-count="true" aria-label="Star kairos-io/kairos on GitHub">Star</a>
-            </li>
-          </ul>
-        </div>
-        <div class="navbar-nav d-none d-lg-block">
-          {{ partial "search-input.html" . }}
+        <div class="nav-bar-wrapper">
+          <a class="navbar-brand" href="{{ .Site.Home.RelPermalink }}">
+            {{- /**/ -}}
+            <span class="navbar-brand__logo navbar-logo">
+              {{- if ne .Site.Params.ui.navbar_logo false -}}
+                {{ with resources.Get "icons/logo.svg" -}}
+                  {{ ( . | minify).Content | safeHTML -}}
+                {{ end -}}
+              {{ end -}}
+            </span>
+            {{- /**/ -}}
+            <span class="navbar-brand__name">
+              {{- .Site.Title -}}
+            </span>
+            {{- /**/ -}}
+          </a>
+          <div class="td-navbar-nav-scroll ml-md-auto" id="main_navbar">
+            <ul class="navbar-nav mt-2 mt-lg-0">
+              <li class="nav-item mr-4 mb-2 mb-lg-0">
+                <a class="nav-link" href="/docs/"><span>Documentation</span></a>
+              </li>
+              <li class="nav-item mr-4 mb-2 mb-lg-0">
+                <a class="nav-link" href="/community/"><span>Community</span></a>
+              </li>
+              <li class="nav-item mr-4 mb-2 mb-lg-0">
+                <a class="nav-link" href="/blog/"><span>Blog</span></a>
+              </li>
+              <li class="nav-item mr-4 mb-2 mb-lg-0 mt-lg-2">
+                <a class="github-button" href="https://github.com/kairos-io/kairos" data-size="large" data-show-count="true" aria-label="Star kairos-io/kairos on GitHub">Star</a>
+              </li>
+            </ul>
+          </div>
+          <div class="navbar-nav d-none d-lg-block">
+            {{ partial "search-input.html" . }}
+          </div>
         </div>
       </nav>
       <div class="overlay astro-7XAARZHW">
         <div class="constraint vertical astro-7XAARZHW">
           <div class="header astro-7XAARZHW">
 
-            <div class="astro-7XAARZHW">
+            <div class="hero-wrapper astro-7XAARZHW">
               <h1 class="title astro-7XAARZHW">
                 Edge, but <span class="astro-7XAARZHW">better</span>
               </h1>
               <span class="subtitle astro-7XAARZHW">
-                Transform any Linux system into a secure, <br />
-                customizable, and easily managed platform <br />
+                Transform any Linux system into a secure,
+                customizable, and easily managed platform
                 for edge computing.</span>
               <div class="buttons astro-7XAARZHW">
-                <a id="quickstart" href="/docs" class="astro-7XAARZHW">
+                <a id="quickstart" href="/docs/getting-started/" class="astro-7XAARZHW">
                   Quick Start
                 </a>
-                <a id="download" href="https://github.com/kairos-io/provider-kairos/releases" class="astro-7XAARZHW"><span class="github-star"><img src="/index/star.svg" alt="github star"></span>Star us on GitHub</a>
+                <a id="download" target="_blank" href="https://github.com/kairos-io/kairos" class="astro-7XAARZHW"><span class="github-star"><img src="/index/star.svg" alt="github star"></span><span class="github-text">Star us on GitHub</span></a>
               </div>
             </div>
 
