--- a/layouts/index.html
+++ b/layouts/index.html
@@ -90,7 +90,8 @@
 
     {{ partial "content.html" . }}
     {{ partial "footer.html" . }}
-    <script type="module" src="/js/index.js"></script>
+    {{ $built := resources.Get "js/index.js" | js.Build (dict "minify" "true" "params" (dict "kairosVersion" $.Page.Site.Params.softwareVersions.kairos_version "k3sVersion" $.Page.Site.Params.softwareVersions.k3s_version)) | resources.Fingerprint "sha512" }}
+    <script type="module" src="{{ $built.RelPermalink }}" integrity="{{ $built.Data.Integrity }}" defer></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     {{ partialCached "scripts.html" . }}
   </body>
