fix navbar when scrolling
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="td-section astro-7XAARZHW">
     <header class="hero astro-7XAARZHW">
-      <nav class="td-navbar navbar-dark js-navbar-scroll td-navbar-cover">
+      <nav class="td-navbar navbar-dark js-navbar-scroll">
         <div class="nav-bar-wrapper">
           <a class="navbar-brand" href="{{ .Site.Home.RelPermalink }}">
             {{- /**/ -}}
