--- a/layouts/shortcodes/exampleImageStandardTag.html
+++ b/layouts/shortcodes/exampleImageStandardTag.html
@@ -1,1 +1,1 @@
-{{$.Page.Site.Params.softwareVersions.exampleImageStandardTag}}
+{{- $.Page.Site.Params.softwareVersions.exampleImageStandardTag -}}
